# SpectrumAnalyzer

./: CMakeLists.txt  README.md  audioConfig.py  config.py  main.cpp
core/: AudioSamplesCollector.cpp  AudioSamplesCollector.hpp  AudioSpectrumAnalyzer.cpp  AudioSpectrumAnalyzer.hpp  AudioSpectrumAnalyzerBase.cpp  AudioSpectrumAnalyzerBase.hpp  CMakeLists.txt  ChebWindow.cpp  ChebWindow.hpp  CommonData.hpp  CommonTypes.hpp  Config.cpp  Config.hpp  ConfigFileReader.cpp  ConfigFileReader.hpp  ConfigReader.cpp  ConfigReader.hpp  DataCalculator.cpp  DataCalculator.hpp  DataExchanger.hpp  DataSelector.cpp  DataSelector.hpp  DynamicMaxHolder.cpp  DynamicMaxHolder.hpp  ElementsInsideGpu.cpp  ElementsInsideGpu.hpp  FFTCalculator.cpp  FFTCalculator.hpp  FftBinCombiner.cpp  FftBinCombiner.hpp  FftCalculator.cpp  FftCalculator.hpp  FrequenciesInfo.cpp  FrequenciesInfo.hpp  Helpers.cpp  Helpers.hpp  IndexSelector.cpp  IndexSelector.hpp  PowerAverager.cpp  PowerAverager.hpp  (+16 more)
core/config/: AdvancedColorSettings.cpp  AdvancedColorSettings.hpp  AlphaFactor.cpp  AlphaFactor.hpp  BackgroundColorSettings.cpp  BackgroundColorSettings.hpp  ColorOfDynamicMaxHoldLine.cpp  ColorOfDynamicMaxHoldLine.hpp  ColorOfDynamicMaxHoldSecondaryLine.cpp  ColorOfDynamicMaxHoldSecondaryLine.hpp  ColorOfLine.cpp  ColorOfLine.hpp  ColorOfStaticLines.cpp  ColorOfStaticLines.hpp  ColorOfStaticText.cpp  ColorOfStaticText.hpp  ColorsOfDynamicMaxHoldRectangle.cpp  ColorsOfDynamicMaxHoldRectangle.hpp  ColorsOfDynamicMaxHoldSecondaryRectangle.cpp  ColorsOfDynamicMaxHoldSecondaryRectangle.hpp  ColorsOfRectangle.cpp  ColorsOfRectangle.hpp  DefaultFullscreenState.cpp  DefaultFullscreenState.hpp  DesiredFrameRate.cpp  DesiredFrameRate.hpp  DynamicMaxHoldAccelerationStateOfFalling.cpp  DynamicMaxHoldAccelerationStateOfFalling.hpp  DynamicMaxHoldRectangleHeightInPercentOfScreenSize.cpp  DynamicMaxHoldRectangleHeightInPercentOfScreenSize.hpp  DynamicMaxHoldSecondarySpeedOfFalling.cpp  DynamicMaxHoldSecondarySpeedOfFalling.hpp  DynamicMaxHoldSecondaryVisibilityState.cpp  DynamicMaxHoldSecondaryVisibilityState.hpp  DynamicMaxHoldSpeedOfFalling.cpp  DynamicMaxHoldSpeedOfFalling.hpp  DynamicMaxHoldVisibilityState.cpp  DynamicMaxHoldVisibilityState.hpp  Frequencies.cpp  Frequencies.hpp  (+46 more)
core/dataSource/: AudioDataSource.cpp  AudioDataSource.hpp  AudioDataSourceDevice.hpp  DataSourceBase.hpp  InputAudioDataSource.cpp  LoopbackAudioDataSourceLinux.cpp  LoopbackAudioDataSourceWindows.cpp  MicrophoneAudioDataSource.cpp  PythonCodeRunner.cpp  PythonCodeRunner.hpp  PythonDataSource.cpp  PythonDataSource.hpp  SamplesCollector.hpp  SamplesCollectorWithPython.cpp  SamplesCollectorWithoutPython.cpp
core/gpu/: ElementInsideGpu.cpp  ElementInsideGpu.hpp  FigureGeometryCalculator.cpp  FigureGeometryCalculator.hpp  Gpu.cpp  Gpu.hpp  LineInsideGpu.cpp  LineInsideGpu.hpp  LinesInsideGpu.cpp  LinesInsideGpu.hpp  RectangleInsideGpu.cpp  RectangleInsideGpu.hpp  RectanglesInsideGpu.cpp  RectanglesInsideGpu.hpp  TextInsideGpu.cpp  TextInsideGpu.hpp
docker/spectrum-analyzer/: Dockerfile
docker/spectrum-analyzer-loopback/: Dockerfile
docker/spectrum-analyzer-tests/: Dockerfile
docs/: index.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
tests/: AudioSpectrumAnalyzerTests.cpp  CMakeLists.txt  ConfigFileReaderTests.cpp  ConfigReaderTests.cpp  DataCalculatorTests.cpp  DataSelectorTests.cpp  FFTCalculatorTests.cpp  FftBinCombinerTests.cpp  FftCalculatorTests.cpp  FrequenciesInfoTests.cpp  IndexSelectorTests.cpp  PortAudioMock.cpp  PortAudioMock.hpp  PowerAveragerTests.cpp  SamplesCollectorTests.cpp  StatsTests.cpp  StereoRmsMeterTests.cpp  WindowTests.cpp  testAudioConfig.py  testConfig.py
tests/helpers/: OpenGlMock.cpp  OpenGlMock.hpp  PortAudioMock.cpp  PortAudioMock.hpp  TestHelpers.cpp  TestHelpers.hpp  TextInsideGpuMock.cpp  TextInsideGpuMock.hpp  ValuesChecker.hpp  WindowBaseMock.cpp  WindowBaseMock.hpp  WindowTestsBase.hpp
